--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-table": "^8.17.3",
     "@types/react-table": "^7.7.20",
     "@vitejs/plugin-react-refresh": "^1.3.6",
